--- a/packages/igx-templates/igx-ts-legacy/tree/default/files/src/app/__path__/__filePrefix__.component.scss
+++ b/packages/igx-templates/igx-ts-legacy/tree/default/files/src/app/__path__/__filePrefix__.component.scss
@@ -12,7 +12,7 @@ igx-tree {
 .node-refresh {
   cursor: pointer;
   padding: 0px 4px;
-  color: hsla(var(--igx-success-500));
+  color: var(--igx-success-500);
 }
 
 .node {
