--- a/packages/igx-templates/igx-ts/select/select-in-form/files/src/app/__path__/__filePrefix__.component.html
+++ b/packages/igx-templates/igx-ts/select/select-in-form/files/src/app/__path__/__filePrefix__.component.html
@@ -10,9 +10,9 @@
 
   <form>
     <div class="select-wrapper">
-      <igx-select #model="ngModel" [(ngModel)]="selected" [ngModelOptions]="{standalone: true}"
+      <igx-select id="fruitSelect" #model="ngModel" [(ngModel)]="selected" [ngModelOptions]="{standalone: true}"
         [placeholder]="'Pick One'">
-        <label igxLabel>Favorite fruit</label>
+        <label igxLabel for="fruitSelect">Favorite fruit</label>
         <igx-prefix>Fruit</igx-prefix>
         <igx-select-item> None </igx-select-item>
         <igx-select-item *ngFor="let fruit of fruits" [value]="fruit">
