--- a/packages/igx-templates/igx-ts/select/select-groups/files/src/app/__path__/__filePrefix__.component.html
+++ b/packages/igx-templates/igx-ts/select/select-groups/files/src/app/__path__/__filePrefix__.component.html
@@ -8,8 +8,8 @@
 </p>
 
 <div class="select-wrapper">
-  <igx-select #select>
-    <label igxLabel>Select With Groups</label>
+  <igx-select #select id="selectWithGroups">
+    <label igxLabel for="selectWithGroups">Select With Groups</label>
     <igx-select-item-group *ngFor="let item of items" [label]="item.type">
       <igx-select-item *ngFor="let fruit of item.fruits" [value]="fruit">
         {{fruit}}
